--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   "dependencies": {
     "axios": "^0.9.1",
     "babel-preset-stage-1": "^6.1.18",
+    "history": "^4.7.2",
     "lodash": "^3.10.1",
-    "react": "^0.14.3",
+    "react": "^0.14.9",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.0.4",
     "redux-thunk": "^2.0.1"
   }
